syntax = "proto3";
option csharp_namespace = "Itmo.Dev.Asap.Core.Permissions";

service PermissionService {
  rpc IsSubmissionMentor(IsSubmissionMentorRequest) returns (IsSubmissionMentorResponse);
  rpc HasAccessToSubjectCourse(HasAccessToSubjectCourseRequest) returns (HasAccessToSubjectCourseResponse);
}

message IsSubmissionMentorRequest {
  string user_id = 1;
  string submission_id = 2;
}

message IsSubmissionMentorResponse {
  bool is_mentor = 1;
}

message HasAccessToSubjectCourseRequest {
  string subject_course_id = 1;
}

message HasAccessToSubjectCourseResponse {
  bool has_access = 1;
}