syntax = "proto3";
option csharp_namespace = "Itmo.Dev.Asap.Core.Students";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "models/student.proto";

service StudentService {
  rpc Create(CreateStudentRequest) returns (CreateStudentResponse);
  rpc DismissFromGroup(DismissFromGroupRequest) returns (DismissFromGroupResponse);
  rpc Transfer(TransferStudentRequest) returns (TransferStudentResponse);
  rpc Query(QueryStudentRequest) returns (QueryStudentResponse);
}

message CreateStudentRequest {
  google.protobuf.StringValue first_name = 1;
  google.protobuf.StringValue middle_name = 2;
  google.protobuf.StringValue last_name = 3;
  string group_id = 4;
}

message CreateStudentResponse {
  Student student = 1;
}

message DismissFromGroupRequest {
  string student_id = 1;
}

message DismissFromGroupResponse {
  Student student = 1;
}

message TransferStudentRequest {
  string student_id = 1;
  string group_id = 2;
}

message TransferStudentResponse {
  Student student = 1;
}

message QueryStudentRequest {
  google.protobuf.StringValue page_token = 1;
  int32 page_size = 2;

  repeated string name_patterns = 3;
  repeated string group_name_patterns = 4;
  repeated int32 university_ids = 5;
}

message QueryStudentResponse {
  google.protobuf.StringValue page_token = 1;
  repeated Student students = 2;
}